[gd_scene load_steps=29 format=2]

[ext_resource path="res://game/game_elements/mobs/bosses/BullBoss/RoboBull.gd" type="Script" id=1]
[ext_resource path="res://game/game_elements/mobs/bosses/BullBoss/robobull.png" type="Texture" id=2]
[ext_resource path="res://game/game_elements/mobs/bosses/BullBoss/bull_charging.wav" type="AudioStream" id=3]
[ext_resource path="res://game/game_elements/mobs/bosses/BullBoss/bull_prep_charge.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/shaders/hurt.tres" type="Shader" id=5]
[ext_resource path="res://assets/animations/mobsHurt.tres" type="Animation" id=6]
[ext_resource path="res://assets/animations/hurt.tres" type="Animation" id=7]
[ext_resource path="res://assets/sfx/metal_ting.wav" type="AudioStream" id=8]
[ext_resource path="res://game/game_elements/mobs/bosses/BullBoss/huff.wav" type="AudioStream" id=9]
[ext_resource path="res://game/game_elements/mobs/bosses/BullBoss/bull_death_effect.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sprites/Death Explosion.png" type="Texture" id=11]

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/flashState = 0.0

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 384, 384 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 384, 384 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 384, 384 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "move",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 45.0
height = 30.0

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1152, 0, 384, 384 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 19 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 50, 55 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 50, 0, 50, 55 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 100, 0, 50, 55 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 150, 0, 50, 55 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 200, 0, 50, 55 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 250, 0, 50, 55 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 300, 0, 50, 55 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 350, 0, 50, 55 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [  ],
"loop": false,
"name": "default",
"speed": 0.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": false,
"name": "explode",
"speed": 12.0
} ]

[node name="RoboBull" type="KinematicBody2D" groups=["mobs"]]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 15 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "move"
frame = 2
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Hurt = ExtResource( 6 )
anims/hurt = ExtResource( 7 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 3, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="VisualWarning" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 20 )
offset = Vector2( 0, -120 )

[node name="ChargeCooldown" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="Sounds" type="Node" parent="."]

[node name="HitSoundEffect" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )

[node name="PrepCharge" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )

[node name="ChargingSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )

[node name="Huff" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )

[node name="DeathSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.5, 0.5 )
scale = Vector2( 5.85, 4.65 )

[node name="DeathAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1, -12 )
scale = Vector2( 3, 3 )
frames = SubResource( 21 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ChargeCooldown" to="." method="_on_ChargeCooldown_timeout"]
[connection signal="finished" from="Sounds/PrepCharge" to="." method="_on_PrepCharge_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="DeathAnimation" to="." method="_on_DeathAnimation_animation_finished"]
